==============
lxml changelog
==============

Under development
=================

Features added
--------------

* ``XSLT.strparam()`` class method to wrap quoted string parameters
  that require escaping.

Other changes
-------------

* More robust error handling on serialisation.


2.2beta2 (2009-01-25)
=====================

Bugs fixed
----------

* Potential memory leak on exception handling.  This was due to a
  problem in Cython, not lxml itself.

* ``iter_links`` (and related link-rewriting functions) in
  ``lxml.html`` would interpret CSS like ``url("link")`` incorrectly
  (treating the quotation marks as part of the link).

* Failing import on systems that have an ``io`` module.


2.1.5 (2009-01-06)
==================

Bugs fixed
----------

* Potential memory leak on exception handling.  This was due to a
  problem in Cython, not lxml itself.

* Failing import on systems that have an ``io`` module.


2.2beta1 (2008-12-12)
=====================

Features added
--------------

* Allow ``lxml.html.diff.htmldiff`` to accept Element objects, not
  just HTML strings.

Bugs fixed
----------

* Crash when using an XPath evaluator in multiple threads.

* Fixed missing whitespace before ``Link:...`` in ``lxml.html.diff``.

Other changes
-------------

* Export ``lxml.html.parse``.


2.1.4 (2008-12-12)
==================

Bugs fixed
----------

* Crash when using an XPath evaluator in multiple threads.


2.0.11 (2008-12-12)
===================

Bugs fixed
----------

* Crash when using an XPath evaluator in multiple threads.


2.2alpha1 (2008-11-23)
======================

Features added
--------------

* Support for XSLT result tree fragments in XPath/XSLT extension
  functions.

* QName objects have new properties ``namespace`` and ``localname``.

* New options for exclusive C14N and C14N without comments.

* Instantiating a custom Element classes creates a new Element.

Bugs fixed
----------

* XSLT didn't inherit the parse options of the input document.
